# netfyr-test-impl

./: Cargo.toml  LICENSE  Makefile  README.md  netfyr.spec
crates/netfyr-backend/: Cargo.toml
crates/netfyr-backend/src/: lib.rs  registry.rs  report.rs  trait_.rs
crates/netfyr-backend/src/dhcp/: client.rs  lease.rs  mod.rs
crates/netfyr-backend/src/netlink/: apply.rs  ethernet.rs  mod.rs  query.rs
crates/netfyr-backend/tests/: backend_tests.rs  dhcp_factory.rs  netlink_apply.rs  netlink_ethernet.rs
crates/netfyr-cli/: Cargo.toml
crates/netfyr-cli/src/: apply.rs  lib.rs  main.rs  query.rs
crates/netfyr-cli/tests/: apply_integration.rs  binary_output.rs  query_integration.rs
crates/netfyr-daemon/: Cargo.toml
crates/netfyr-daemon/src/: factory_manager.rs  main.rs  policy_store.rs  reconciler.rs  server.rs
crates/netfyr-daemon/tests/: binary_output.rs  server_integration.rs
crates/netfyr-policy/: Cargo.toml
crates/netfyr-policy/src/: lib.rs
crates/netfyr-reconcile/: Cargo.toml
crates/netfyr-reconcile/src/: diff.rs  lib.rs  report.rs
crates/netfyr-state/: Cargo.toml
crates/netfyr-state/src/: diff.rs  lib.rs  loader.rs  schema.rs  set.rs  yaml.rs
crates/netfyr-state/src/schemas/: ethernet.json
crates/netfyr-state/tests/: entity_state_types.rs  workspace_setup.rs
crates/netfyr-test-utils/: Cargo.toml
crates/netfyr-test-utils/src/: dnsmasq.rs  lib.rs  netns.rs
crates/netfyr-test-utils/tests/: workspace_setup.rs
crates/netfyr-varlink/: Cargo.toml
crates/netfyr-varlink/src/: client.rs  io.netfyr.varlink  lib.rs  types.rs
crates/netfyr-varlink/tests/: integration.rs
examples/policies/: bare-ethernet.yaml
man/: netfyr-apply.1  netfyr-examples.7  netfyr-query.1  netfyr.1  netfyr.yaml.5
scripts/: build-rpm.sh
tests/: 001-binary-cli.sh  001-binary-daemon.sh  001-file-structure.sh  001-helpers-functions.sh  001-makefile-target.sh  001-no-skip-policy.sh  001-readme.sh  001-test-naming-convention.sh  001-workspace-features.sh  001-workspace-members.sh  102-query-all-veth-pair.sh  102-query-by-mac.sh  102-query-not-found.sh  102-query-routes.sh  102-query-veth-by-name.sh  103-apply-add-remove-address.sh  103-apply-add-route.sh  103-apply-query-roundtrip.sh  103-apply-set-mtu.sh  301-apply-dry-run.sh  301-apply-static-mtu.sh  301-apply-with-address.sh  301-dhcp-policy-no-daemon.sh  301-dry-run-no-changes.sh  301-no-args-error.sh  301-path-not-found.sh  301-yaml-parse-error.sh  302-query-all.sh  302-query-veth-by-name.sh  302-query-yaml.sh  401-dhcpv4-acquire-lease.sh  401-dhcpv4-daemon-restart.sh  401-dhcpv4-unmanaged-interface.sh  403-apply-dhcp-policy.sh  403-apply-static-policy.sh  403-daemon-graceful-shutdown.sh  403-daemon-starts-and-listens.sh  403-dhcp-and-static-merged.sh  403-dhcp-factory-stopped-on-removal.sh  403-dhcp-unmanaged-interface.sh  (+13 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: man_page_yaml_reference.rs  man_pages.rs  packaging.rs
