[package]
name = "netfyr-policy"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# tempfile: create temporary files and directories in tests
tempfile = "3"

[dependencies]
netfyr-state = { path = "../netfyr-state" }
# serde + serde_yaml: FactoryType serialization/deserialization and raw YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# thiserror: ergonomic error type definitions for FactoryError and PolicyError
thiserror = "1"
# tracing: logging in factory operations
tracing = "0.1"
# indexmap: PolicySet internal storage — preserves insertion order for deterministic iteration
indexmap = { version = "2", features = ["serde"] }
# walkdir: recursive directory traversal for load_policy_dir (std has no recursive walker)
walkdir = "2"
