[package]
name = "netfyr-state"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
ipnetwork = { version = "0.20", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
