[package]
name = "netfyr-state"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML parsing and emission; provides Deserializer::from_str for multi-document
# iteration and serde_yaml::Value for raw-value manipulation. No std alternative.
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
ipnetwork = { version = "0.20", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
# Used to derive Error and Display for ConflictError without hand-rolling the impls.
thiserror = "1"
# Recursive directory traversal with filter_entry for hidden-file pruning.
# std::fs::read_dir is not recursive and would require manual recursion.
walkdir = "2"
